@@ -70,7 +70,7 @@ stdint
 strcase
 strftime
 strptime
-strtoumax
+strtoimax
 sys_wait
 system-quote
 unistd
@@ -85,7 +85,7 @@ xalloc
 xfreopen
 xreadlink
 xstdopen
-xstrtoumax
+xstrtoimax
 xvasprintf
 '
 
